Fixed warnings in AQL tests.