@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2015, 2021 Obeo.
+ * Copyright (c) 2015, 2023 Obeo.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -205,7 +205,7 @@ public class AstEvaluatorTest extends AstBuilder {
 	@Test
 	public void testLambda() {
 		Map<String, Object> varDefinitions = new HashMap<String, Object>();
-		varDefinitions.put("x", new Integer(1));
+		varDefinitions.put("x", Integer.valueOf(1));
 		Lambda lambda = lambda(varRef("x"));
 		EvaluationResult value = evaluator.eval(varDefinitions, lambda);
 		assertTrue(value.getResult() instanceof LambdaValue);
