@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2015, 2022 Obeo.
+ * Copyright (c) 2015, 2023 Obeo.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -480,10 +480,10 @@ public class EvaluationTest {
 	@Test
 	public void testConditionnalCompletePredicate() {
 		Map<String, Object> varDefinitions = new HashMap<String, Object>();
-		varDefinitions.put("x", new Integer(1));
+		varDefinitions.put("x", Integer.valueOf(1));
 		assertOKResultEquals("trueBranch", engine.eval(builder.build(
 				"if x > 0 then 'trueBranch' else 'falseBranch' endif"), varDefinitions));
-		varDefinitions.put("x", new Integer(0));
+		varDefinitions.put("x", Integer.valueOf(0));
 		assertOKResultEquals("falseBranch", engine.eval(builder.build(
 				"if x > 0 then 'trueBranch' else 'falseBranch' endif"), varDefinitions));
 	}
